优化FlowQueryService：Android M 以下只在移动网络下才开启，Android N 以上（因为无法再静态注册网络改变的广播）会判断是否是移动网络才查询。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <receiver android:name=".MyBroadReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
     </application>
