添加Bugly统计功能，分支：with_bugly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:fullBackupContent="true"
         android:icon="@drawable/flowwall"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/flowwall"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
